@@ -441,12 +441,6 @@ class Process(object):
         """
         return self._platform_impl.get_memory_info()
 
-    def get_ext_memory_info(self):
-        """
-        XXX
-        """
-        return self._platform_impl.get_ext_memory_info()
-
     def get_memory_percent(self):
         """Compare physical system memory to process resident memory and
         calculate process memory utilization as a percentage.
